# certificates

./: Makefile  main.py  pyproject.toml  requirements.txt  test.py
inputs/: students.xlsx
